--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ body {
   padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
   min-width: 400px;
+  background-color: #442e79;
 }
 
 input {
@@ -14,11 +15,18 @@ input {
 }
 
 button {
-  background: purple;
+  background: #ff8e09;
   color: white;
   padding: 10px 20px;
-  border: 1px solid purple;
+  border-radius: 8px;
+  border: none;
   font-weight: bold;
+}
+
+.btnContainer{
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
 }
 
 #delete-btn {
@@ -39,3 +47,43 @@ li {
 a {
   color: purple;
 }
+
+.input-div {
+  position: relative;
+ }
+ 
+ .input {
+  border: solid 1.5px #9e9e9e;
+  border-radius: 1rem;
+  background: none;
+  padding: 1rem;
+  font-size: 1rem;
+  color: #f5f5f5;
+  transition: border 150ms cubic-bezier(0.4,0,0.2,1);
+ }
+ 
+ .user-label {
+  position: absolute;
+  left: 15px;
+  color: #e8e8e8;
+  pointer-events: none;
+  transform: translateY(1rem);
+  transition: 150ms cubic-bezier(0.4,0,0.2,1);
+ }
+ 
+ .input:focus, input:valid {
+  outline: none;
+  border: 1.5px solid #ff8e09;
+ }
+ 
+ .input:focus ~ label, input:valid ~ label {
+  transform: translateY(-50%) scale(0.8);
+  padding: 0 .2em;
+  background-color: #442e79;
+  color: #ff8e09;
+ }
+
+ .resContainer{
+  display: flex;
+  justify-content: center;
+ }
