--- a/index.css
+++ b/index.css
@@ -6,6 +6,11 @@ body {
   background-color: #442e79;
 }
 
+img {
+  width: 30%;
+  margin: auto;
+}
+
 input {
   width: 100%;
   padding: 10px;
@@ -16,22 +21,12 @@ input {
 
 button {
   background: #ff8e09;
-  color: white;
+  color: #fff;
   padding: 10px 20px;
   border-radius: 8px;
   border: none;
   font-weight: bold;
-}
-
-.btnContainer{
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
-}
-
-#delete-btn {
-  background: white;
-  color: purple;
+  box-shadow: 0 4px 0 0 #aa4412;
 }
 
 ul {
@@ -48,42 +43,67 @@ a {
   color: purple;
 }
 
+/* Class Section */
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+/* Input Section */
+
 .input-div {
   position: relative;
- }
- 
- .input {
+}
+
+.input {
   border: solid 1.5px #9e9e9e;
   border-radius: 1rem;
   background: none;
   padding: 1rem;
   font-size: 1rem;
   color: #f5f5f5;
-  transition: border 150ms cubic-bezier(0.4,0,0.2,1);
- }
- 
- .user-label {
+  transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.user-label {
   position: absolute;
   left: 15px;
   color: #e8e8e8;
   pointer-events: none;
   transform: translateY(1rem);
-  transition: 150ms cubic-bezier(0.4,0,0.2,1);
- }
- 
- .input:focus, input:valid {
+  transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input:focus,
+input:valid {
   outline: none;
   border: 1.5px solid #ff8e09;
- }
- 
- .input:focus ~ label, input:valid ~ label {
+}
+
+.input:focus ~ label,
+input:valid ~ label {
   transform: translateY(-50%) scale(0.8);
-  padding: 0 .2em;
+  padding: 0 0.2em;
   background-color: #442e79;
   color: #ff8e09;
- }
+}
 
- .resContainer{
+.resContainer {
   display: flex;
   justify-content: center;
- }
+}
+
+/* Button Section */
+
+#delete-btn {
+  background: white;
+  color: purple;
+}
+
+.btnContainer {
+  display: flex;
+  justify-content: start;
+  gap: 0.5rem;
+  padding: 1em 0;
+}
