--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ button {
   border-radius: 8px;
   border: none;
   font-weight: bold;
-  box-shadow: 0 4px 0 0 #aa4412;
+  text-transform: uppercase;
 }
 
 ul {
@@ -89,11 +89,6 @@ input:valid ~ label {
   color: #ff8e09;
 }
 
-.resContainer {
-  display: flex;
-  justify-content: center;
-}
-
 /* Button Section */
 
 #delete-btn {
@@ -106,4 +101,26 @@ input:valid ~ label {
   justify-content: start;
   gap: 0.5rem;
   padding: 1em 0;
+}
+
+/* Res Section */
+
+.resContainer {
+  color: #fff;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.porcentagem:hover,
+.info:hover {
+  text-decoration: underline #ff8e09;
+  margin-bottom: 0.6em;
+}
+
+.avatar {
+  float: left;
+  box-sizing: border-box;
+}
+
+.info-div {
 }
