--- a/index.css
+++ b/index.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@300&display=swap');
+
 body {
   margin: 0;
   padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
   min-width: 400px;
   background-color: #442e79;
+  font-family: 'Mukta', sans-serif;
 }
 
 img {
@@ -27,12 +31,14 @@ button {
   border: none;
   font-weight: bold;
   box-shadow: 0 4px 0 0 #aa4412;
+  font-size: 15px;
 }
 
 ul {
   margin-top: 20px;
   list-style: none;
   padding-left: 0;
+  ;
 }
 
 li {
@@ -47,7 +53,15 @@ a {
 
 .container {
   display: flex;
+  align-items: center;
   justify-content: center;
+  flex-direction: column;
+  font-family: 'Ubuntu Mono', monospace;
+}
+
+.pegaTitle{
+  margin-top: -4%;
+  color: #FFFF;
 }
 
 /* Input Section */
