--- a/project-2A/assets/style.css
+++ b/project-2A/assets/style.css
@@ -1,6 +1,12 @@
+*{
+  padding: 0;
+  margin: 0;
+}
+
 body{
   font-family: 'Inter', sans-serif;
-  padding: 10px;
+  width: 300px;
+  padding: 40px 20px;
 }
 
 .header{
@@ -12,7 +18,8 @@ body{
   max-width: 100%;
 }
 
-.form_label{
+/* Tela inicial */
+.home-page .form_label{
   color: #878787;
   font-size: 0.625rem;
   font-weight: bold;
@@ -21,19 +28,21 @@ body{
   display: block;
 }
 
-.form_input{
+.home-page .form_input{
   font-size: 0.625rem;
   font-weight: 500;
   font-style: italic;
   border: none;
   border-radius: 0 0 10px 10px;
   box-shadow: 0 1px 2px 0 rgba(54, 8, 122, .5);
-  width: 200px;
+  width: 90%;
   padding: 10px;
-  margin: 5px 0 20px; 
+  margin: 12px auto 40px auto; 
+  display: block;
 }
 
-.form_btn{
+.home-page .form_btn{
+  cursor: pointer;
   background-color: #f79017;
   color: #ffffff;
   font-weight: bold;
@@ -45,3 +54,73 @@ body{
   margin: auto;
   display: block;
 }
+
+/* Tela relatório */
+.report-page{
+  margin-top: 30px;
+  display: none;
+}
+
+.grafic{
+  text-align: center;
+}
+
+.report-username{
+  color: #878787;
+  font-size: 0.625rem;
+  font-weight: bold;
+  padding: 10px;
+  margin-bottom: 15px;
+  display: inline-block;
+}
+
+.report-percent{
+  color: #b956d1;
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.report-text{
+  color: rgba(135, 135, 135, .8);
+  padding: 5px;
+  margin-bottom: 15px;
+}
+
+.report-text .detail{
+  font-weight: bold;
+}
+
+.load_btn{
+  cursor: pointer;
+  background-color: #5d1bc0;
+  color: #ffffff;
+  font-weight: bold;
+  text-transform: uppercase;
+  border: none;
+  box-shadow: 0 3px 0 0 #442e79;
+  border-radius: 20px;
+  padding: 10px 30px;
+  margin: auto;
+  display: block;
+}
+
+.hidden{
+  display: none;
+}
+
+/* (Opcional após o fetch)
+.result-text{
+  color: #f79017;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
+}
+*/
+
+.active{
+  display: block;
+}
+
