Added final code from client side

--- a/interface/style.css
+++ b/interface/style.css
@@ -34,21 +34,24 @@ ol{
 }
 
 li{
-    background-color: cadetblue;
     height: fit-content;
     padding: 1vh;
     position: relative;
+    transition: all .3s;
+    border-left: 1vh solid blueviolet;
 }
 
 .pegabot-bot-probability{
     position: absolute;
     right: 1vh;
-    background-color: aqua;
     display: inline-block;
 }
 
 li:hover{
     cursor: pointer;
+    font-weight: bold;
+    padding: 1vh 2vh;
+    border-left: 1.5vh solid blueviolet;
 }
 
 .texts{
@@ -56,7 +59,6 @@ li:hover{
 }
 
 #progress-information{
-    background-color: aqua;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -67,4 +69,13 @@ li:hover{
 progress{
     height: 7vh;
     width: 50%;
+}
+progress::-webkit-progress-value{
+    background:gold;
+}
+progress::-webkit-progress-bar{
+    background:gold;
+}
+progress::-moz-progress-bar{
+    background:gold;
 }
